# rank-fusion

./: .gitignore  ALL_NEXT_STEPS_COMPLETE.md  CHANGELOG.md  CI_SETUP_COMPLETE.md  COMPLETE_TASK_SUMMARY.md  COMPREHENSIVE_REPOSITORY_ANALYSIS.md  CRITIQUE.md  Cargo.toml  DESIGN.md  DOCUMENTATION_CRITIQUE_DETAILED.md  DOCUMENTATION_STATIC_CHECKS.md  EXECUTION_SUMMARY.md  FINAL_REVIEW.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  GAPS_ANALYSIS.md  IMPLEMENTATION_PLANS.md  OUTREACH.md  PUBLISHING.md  README.md  REMAINING_WORK.md  SCRUTINY_REPORT.md  eval_report.html  eval_results.json  monitor_e2e.sh  mutants.toml
.cursor/rules/: fusion-specific.mdc
.github/: markdown-link-check.json
.github/workflows/: ci.yml  docs-check.yml  e2e-published.yml  publish-wasm.yml  publish.yml
archive/2025-01/: COMPREHENSIVE_REVIEW.md  EXPLANATION_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  PRE_PUBLISH_CHECK.md  README.md
benches/: fusion.rs  fusion_bench.rs
docs/: CI_E2E_SECURITY_SETUP.md  DOCUMENTATION_INSPIRATION.md  E2E_VALIDATION_COMPLETE.md  NEXT_STEPS.md  SECURITY.md  VERSION_MANAGEMENT.md  main.typ
evals/: COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_REFINEMENT_REPORT.md  CRITIQUE_AND_REFINEMENTS.md  Cargo.toml  DATASET_TOOLS.md  DEEP_SHARING_ANALYSIS.md  EXTENDED_DATASET_GUIDE.md  FINAL_REFINEMENTS.md  FINAL_STATUS.md  IMPROVEMENTS_APPLIED.md  INTEGRATION_GUIDE.md  QUICK_START.md  README_REAL_WORLD.md  REFINEMENTS_SUMMARY.md  SCRUTINY_AND_TESTING_IMPROVEMENTS.md  SHARED_METRICS_FINAL_ANALYSIS.md  SHARED_METRICS_IMPLEMENTATION_PLAN.md  SHARED_METRICS_PROPOSAL.md  SHARING_ACROSS_WORKSPACES.md  TODO_COMPLETION_SUMMARY.md
evals/scripts/: convert_hf_to_trec.py  download_miracl.sh  download_msmarco.sh  download_mteb.sh  generate_dataset_registry.sh  setup_all_datasets.sh  setup_dataset.sh
evals/src/: dataset_converters.rs  dataset_loaders.rs  dataset_registry.rs  dataset_statistics.rs  dataset_validator.rs  datasets.rs  evaluate_real_world.rs  integration_tests.rs  lib.rs  main.rs  metrics.rs  real_world.rs
examples/: ecommerce_search.rs  explainability.rs  hybrid_search.rs  late_fusion.rs  multi_retriever.rs  rag_pipeline.rs  score_normalization.rs  webassembly.rs  weighted_retrieval.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_combsum.rs  fuzz_rrf.rs
hack/viz/: README.md  RRF_VISUALIZATIONS.md  add_hypothesis_testing.py  generate_rrf_real_data.py  generate_rrf_viz.py  validate_visualizations.py
rank-fusion/: CHANGELOG.md  Cargo.toml  DECISION_GUIDES.md  DESIGN.md  ERROR_HANDLING.md  EXAMPLES_COMPREHENSIVE.md  GETTING_STARTED.md  INTEGRATION.md  INTEGRATION_REAL_WORLD.md  PERFORMANCE.md  README.md
rank-fusion-python/: Cargo.toml  README.md  pyproject.toml  rank_fusion.pyi
rank-fusion-python/rank_fusion/: __init__.py
rank-fusion-python/src/: lib.rs
rank-fusion-python/tests/: __init__.py  test_fusion.py
rank-fusion/benches/: comprehensive.rs  fusion.rs
rank-fusion/examples/: additive_multi_task.rs  batch_processing.rs  ecommerce_search.rs  hybrid_search.rs  multi_retriever.rs  python_integration.rs  real_world_ecommerce.rs  real_world_elasticsearch.rs  real_world_elasticsearch_actual.rs  refine_pipeline.rs  score_normalization.rs  standardized_fusion.rs  webassembly.rs
rank-fusion/src/: lib.rs  proptests.rs  validate.rs  wasm.rs
rank-fusion/tests/: edge_cases.rs  integration.rs
scripts/: verify_all_readmes.sh  verify_readme.sh  vlm_inspect_all_readmes.sh
src/: lib.rs  python.rs
test-e2e-local/: Cargo.toml  README.md
tests/: integration.rs
viz/: generate_rrf_viz.py
