[workspace]
members = ["rank-fusion", "rank-fusion-python", "evals", "test-e2e-local"]
resolver = "2"
default-members = ["rank-fusion"]

[workspace.package]
version = "0.1.19"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py37"] }
criterion = "0.5"
proptest = "1"

