[workspace]
members = ["rank-fusion", "rank-fusion-python", "evals", "test-e2e-local"]
resolver = "2"
# Default members excludes evals to avoid rank-eval dependency in CI
# evals can be built separately when rank-eval is available
default-members = ["rank-fusion"]

[workspace.package]
version = "0.1.20"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py37"] }
criterion = "0.5"
proptest = "1"

