[package]
name = "rank-fusion-evals"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rank_fusion_evals"
path = "src/lib.rs"

[dependencies]
rank-fusion = { path = "../rank-fusion" }
# rank-eval is in a separate repository
# For local development, uncomment the path dependency:
# rank-eval = { path = "../../rank-eval" }
# For CI/publishing, use published version (when available):
rank-eval = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
anyhow = "1.0"
url = "2.5"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[[bin]]
name = "evaluate-real-world"
path = "src/bin/evaluate_real_world.rs"

[[bin]]
name = "list-datasets"
path = "src/bin/list_datasets.rs"

[[bin]]
name = "validate-dataset"
path = "src/bin/validate_dataset.rs"

[[bin]]
name = "dataset-stats"
path = "src/bin/dataset_stats.rs"

