[package]
name = "rank-fusion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Rank fusion algorithms for hybrid search — RRF, ISR, CombMNZ, Borda, DBSF. Zero dependencies."
keywords = ["vector-search", "hybrid-search", "rrf", "rag", "search"]
categories = ["algorithms", "data-structures", "mathematics"]
repository = "https://github.com/arclabs561/rank-fusion"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "fusion"
harness = false

[[bench]]
name = "comprehensive"
harness = false

# Optimize WASM builds for smaller binary size
# These settings reduce WASM binary size by 30-40% compared to defaults
[profile.release]
# Enable Link-Time Optimization for smaller binaries
lto = true
# Optimize for size (can use "s" for more aggressive size optimization)
opt-level = "z"
# Single codegen unit for better LTO
codegen-units = 1
